# todo-list-rs

./: .env  Cargo.toml  README.md  diesel.toml  docker-compose.yml
entity/: Cargo.toml
entity/src/: lib.rs  mod.rs  prelude.rs  todo_list_items.rs  todo_lists.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20240808_132520_create_table.rs  m20240808_142724_create_todo_list.rs  m20240808_151647_create_todo_list_items.rs  setup.rs
migration/src/sql/down/: 02-drop-todo-list-items-table.sql
migration/src/sql/up/: 00-create-posts-table.sql  01-create-todo-lists-table.sql  02-create-todo-list-items-table.sql  03-add-foreign-key-to-todo-list-items.sql
migrations/2024-07-26-122609_init-todo-list/: down.sql  up.sql
migrations/2024-07-26-153129_create-todo-list-table/: up.sql
migrations/2024-08-02-121606_create-todo-list-items-table/: down.sql  up.sql
migrations/2024-08-02-123118_add-foreign-key-to-todolist/: down.sql
src/: config.rs  db_connection.rs  main.rs  schema.rs  todo_list.rs  todo_list_item.rs
src/config/: actix.rs  database_config.rs  mod.rs
src/domain/: todo_list.rs
src/dto/: mod.rs
src/dto/requests/: mod.rs  todo_lists.rs
src/dto/views/: todo_list.rs
src/handlers/: todo_handlers.rs
src/http/handlers/: examples.rs  mod.rs  state.rs  todo_handlers.rs  todo_lists.rs
src/models/: todo.rs
src/repositories/: mod.rs  todo_lists.rs  todo_lists_repository.rs  todo_repository.rs
src/services/: todo_service.rs
src/tests/: integration_tests.rs
tests/: integration_test.rs
